ADEN-6941 Fixes porvata buttons on IE11

--- a/src/styles/_uap.scss
+++ b/src/styles/_uap.scss
@@ -250,7 +250,7 @@ $ease-in-cubic: cubic-bezier(0.55, 0.055, 0.675, 0.19);
 
 		&.is-on {
 			.porvata-off-icon {
-				display: unset;
+				display: inline-block;
 			}
 
 			.porvata-on-icon {
